xor_39388088_stderr.txt
  File "xor_base.py", line 175
    n_hidden3=
             ^
SyntaxError: invalid syntax
